<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniProjet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="make_request">Make Request</string>
    <string name="view_map">View Map</string>
    <string name="view_list">View List</string>
    <string name="API_BASE">http://relaybit.com:2222/</string>
    <string name="API_FORMAT"></string>
    <string name="title_activity_make_request">Request a hike</string>
    <string name="title_activity_view_map">Find hitchhikers near you</string>
    <string name="destination">Destination : </string>
    <string name="personsCount">Number of travelers : </string>
    <string name="message">Leave a message : </string>
    <string name="summit">Summit</string>
    <string name="title_activity_view_list">List of hitchhikers</string>
    <string name="list_activity_nothing_to_display">No data available</string>
    <string name="desc_status">status</string>
    <string name="title_activity_accept_request">Confirm you will pick them up</string>
    
    
        <!-- Strings related to accepting a request -->
    <string name="lb_destination">Destination :   </string>
    <string name="lb_username">Username :   </string>
    <string name="lb_passengers">Number of travelers :   </string>
    <string name="lb_address">Address :   </string>
    <string name="lb_messages">Messages : </string>
    <string name="btn_Notify">Accept request</string>
    <string name="btn_Back">Back</string>
    <string name="lb_reply">Reply :</string>
    <string name="btn_send_reply">Send reply</string>
    
    

</resources>
