<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ulaval.ima.miniprojet.MakeRequestActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/label_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/destination"
        android:textSize="@dimen/activity_text" />

    <EditText
        android:id="@+id/inputDestination"
        android:layout_below="@id/label_destination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:textSize="@dimen/activity_text" />
    
    <TextView
        android:id="@+id/label_personsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputDestination"
        android:text="@string/personsCount"
        android:textSize="@dimen/activity_text" />

    <EditText
        android:id="@+id/inputPersonsCount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_personsCount"
        android:inputType="number" 
        android:textSize="@dimen/activity_text"/>
    
    <TextView
        android:id="@+id/label_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPersonsCount"
        android:text="@string/message"
        android:textSize="@dimen/activity_text" />
    
    <EditText
        android:id="@+id/inputMessage"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/label_message"
        android:textSize="@dimen/activity_text"/>
   
    
    <Button
        android:id="@+id/summit_btn"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/inputMessage"
        android:text="@string/summit"
        android:onClick="summit"/>

</RelativeLayout>
