<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ulaval.ima.miniprojet.MakeRequestActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/tvReqDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDestination"
        android:layout_below="@+id/tvDestination"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvReqUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUsername"
        android:layout_below="@+id/tvUsername"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDestination"
        android:layout_alignParentTop="true"
        android:text="@string/lb_username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvReqUsername"
        android:text="@string/lb_destination"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvNbPassengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvReqDestination"
        android:layout_below="@+id/tvReqDestination"
        android:text="@string/lb_passengers"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvReqPassengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvNbPassengers"
        android:layout_below="@+id/tvNbPassengers"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/tvReqAddress"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvAddress"
        android:layout_toRightOf="@+id/tvReqPassengers"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textSize="@dimen/activity_text" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvReqPassengers"
        android:layout_below="@+id/tvReqPassengers"
        android:text="@string/lb_address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/notify_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvReqAddress"
        android:layout_toRightOf="@+id/tvAddress"
        android:onClick="notifyButton"
        android:text="@string/btn_Notify" />

</RelativeLayout>